<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
                name="viewModel"
                type="com.airasia.supportwheeloffate.ui.login.LoginActivityViewModel"/>
    </data>


    <LinearLayout style="@style/WidthMatchHeightMatchVertical"
                  android:background="@color/default_white_background">

        <ScrollView style="@style/WidthMatchHeightMatch"
                    android:fillViewport="true">
            <LinearLayout style="@style/WidthMatchHeightMatchVertical">

                <LinearLayout
                        android:padding="@dimen/activity_vertical_margin"
                        android:layout_weight="1"
                        style="@style/WidthMatchHeightWrapVertical">


                    <LinearLayout
                            android:layout_marginTop="50dp"
                            style="@style/WidthMatchHeightWrapVertical">

                        <TextView
                                android:id="@+id/emailLabel"
                                style="@style/LoginFieldTitleStyle"
                                android:text="@string/email"/>

                        <!--User name-->
                        <com.google.android.material.textfield.TextInputLayout
                                style="@style/BorderedTextInputLayoutStyle">

                            <LinearLayout style="@style/DefaultInputFieldWrapperStyle">

                                <com.google.android.material.textfield.TextInputEditText
                                        style="@style/BorderEditTextStyle"
                                        android:imeOptions="actionNext"
                                        app:validateEmpty="@{true}"
                                        android:text="@={viewModel.email}"
                                        app:validateEmptyMessage="@{@string/email_is_required}"/>
                            </LinearLayout>
                        </com.google.android.material.textfield.TextInputLayout>

                        <!--Password-->
                        <TextView
                                android:id="@+id/passwordLabel"
                                style="@style/LoginFieldTitleStyle"
                                android:layout_marginTop="20dp"
                                android:text="@string/password"/>
                        <com.google.android.material.textfield.TextInputLayout
                                style="@style/BorderedTextInputLayoutStyle">

                            <LinearLayout style="@style/DefaultInputFieldWrapperStyle">

                                <com.google.android.material.textfield.TextInputEditText
                                        style="@style/BorderEditTextStyle"
                                        android:imeOptions="actionDone"
                                        app:validateEmpty="@{true}"
                                        android:text="@={viewModel.password}"
                                        android:inputType="textPassword"
                                        app:validateEmptyMessage="@{@string/password_is_required}"/>
                            </LinearLayout>
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <!--Forgot password-->
                    <TextView android:id="@+id/forgotPasswordTextView"
                              style="@style/WidthWrapHeightWrap"
                              android:textColor="#827F7F"
                              android:layout_marginTop="5dp"
                              android:padding="5dp"
                              android:layout_gravity="right"
                              android:text="@string/forgot_password"
                              android:textSize="14sp"/>


                    <!--Buttons-->
                    <com.google.android.material.button.MaterialButton
                            android:id="@+id/loginButton"
                            android:layout_marginTop="60dp"
                            style="@style/DefaultButtonStyle"
                            android:textAllCaps="false"
                            android:text="@string/login"/>

                    <com.google.android.material.button.MaterialButton
                            android:id="@+id/agentButton"
                            style="@style/DefaultBorderButtonStyle"
                            android:textAllCaps="false"
                            android:layout_marginTop="@dimen/activity_vertical_margin"
                            android:text="@string/register"/>
                </LinearLayout>

                <!--Terms-->
                <LinearLayout
                        android:id="@+id/termsView"
                        android:layout_margin="@dimen/activity_vertical_margin"
                        android:gravity="center"
                        style="@style/WidthMatchHeightWrapVertical">

                    <TextView style="@style/WidthWrapHeightWrap"
                              android:textSize="12sp"
                              android:visibility="gone"
                              android:text="Copyright of Merchantrade Asia Sdn Bhd"
                              android:textColor="#505050"/>

                    <TextView style="@style/WidthWrapHeightWrap"
                              android:textSize="12sp"
                              android:text="@string/terms_and_conitions"
                              android:textColor="#505050"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>
